--- a/style.css
+++ b/style.css
@@ -11,12 +11,12 @@ STYLE.CSS - global styling för webbsidan
   --clr-copy: #e6e6e6;    /* brödtext på sidan */
 
   --clr-primary: #161616;               /* bakgrundsfärg och primära färgen */
-  --clr-secondary: rgb(215, 175, 255);       /* navigationsfärg och bakgrundsfärg när man klickar  */
-  --clr-cta: rgba(87, 3, 84, 0.603);          /* CTA-färg */
+  --clr-secondary: rgb(182, 180, 180);       /* navigationsfärg och bakgrundsfärg när man klickar  */
+  --clr-cta: rgba(197, 108, 194, 0.733);          /* CTA-färg */
   --clr-highlight: rgb(138, 72, 116);   /* highlight i menyn */
 
   --clr-navbar: #222;
-  --clr-dropdown-background: #8b7d7d;     /* dropdown-menyns bakgrund */
+  --clr-dropdown-background: #553958;     /* dropdown-menyns bakgrund */
 
   --clr-hover: var(--clr-highlight);            /* markeringsfärg */
   --clr-active: var(--clr-dropdown-background); /* färg på text när man klickar */
@@ -375,3 +375,89 @@ RESPONSIVITET
     opacity: 0;
   }
 }
+
+
+TODO
+/* button styling */
+
+button {
+  all: unset;
+  font-family: inherit;
+
+  display: block;
+
+  padding: 1rem 2rem;
+
+  font-weight: 500;
+
+  color:  rgb(24, 209, 113);
+  background-color: rgb(24, 209, 113);
+  
+  border-radius: 333rem;
+
+  box-shadow: 0 4px 4px hsla(149 93% 12% / 0.2);
+
+  cursor: pointer;    
+}
+
+.btn-primary,
+.btn-secondary {
+  outline: 1px solid hsl(149 73% 43% / 1);
+}
+
+
+.btn-secondary {
+  background-color: transparent;
+
+  box-shadow: none;
+
+  color: hsl(149 73% 43% / 1);
+}
+
+.btn-tertiary {
+  color: black;
+  background-color: transparent;
+  box-shadow: none;
+}
+
+.btn-primary:hover,
+.btn-secondary:hover {
+  background: linear-gradient(to top, rgb(5, 238, 118), hsl(147, 81%, 65%));
+  color: white;
+}
+
+
+.btn-tertiary:hover {
+  outline: 1px solid hsl(149 73% 43% / 1);
+}
+
+.btn-secondary:active {
+
+  background: linear-gradient(to bottom, rgb(5, 238, 118), hsl(147, 81%, 65%));
+
+}
+
+.btn-primary:active {
+  background: linear-gradient(to bottom, rgb(5, 238, 118), hsl(147, 81%, 65%));
+  box-shadow: 0 1px 1px hsla(149 93% 12% / 0.3);
+}
+
+
+.takete {
+  border-radius: 0%;
+
+}
+
+.takete:hover {
+  background: rgb(5, 238, 118);
+}
+
+
+.takete:active {
+  background:  hsl(149 96%  48% / 0.7);
+}
+
+.takete:last-child:hover {
+  background: transparent;
+
+} 
