--- a/assignments/projekt2/grunder.css
+++ b/assignments/projekt2/grunder.css
@@ -23,7 +23,7 @@ body {
 main {
   margin-inline: auto;
   width: 100%;
-  max-width: 1200px;
+  max-width: 75rem;
   padding: 1rem;
   display: flex;
   gap: 2rem;
@@ -49,7 +49,7 @@ section {
   margin: 1rem auto;
   padding: 1rem;
   width: 100%;
-  max-width: 1200px;
+  max-width: 75rem;
 }
 
 p,
@@ -76,7 +76,7 @@ h3 {
 }
 
 p {
-  font-size: 1.125rem;
+  font-size: 1.1rem;
   color: #333;
 }
 
@@ -131,7 +131,7 @@ nav {
 
 .logo {
   border-radius: 50%;
-  width: 42px;
+  width: 2.5rem;
 }
 
 .primary-navigation {
@@ -161,8 +161,8 @@ nav {
   padding: 1rem;
   border-radius: 0.5rem;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  min-width: 220px;
-  max-width: 250px;
+  min-width: 14rem;
+  max-width: 16rem;
   height: fit-content;
   z-index: 10;
   margin-left: 0;
